# lcsc-grabber

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lcsc_grabber.py  lcsc_grabber.spec  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
plugins/lcsc_grabber/: __init__.py  plugin.py
plugins/lcsc_grabber/api/: cache.py  easyeda_client.py  models.py
plugins/lcsc_grabber/converters/: easyeda2kicad_wrapper.py  footprint_converter.py  model3d_handler.py  symbol_converter.py
plugins/lcsc_grabber/gui/: library_manager_dialog.py  main_dialog.py  preview_panel.py
plugins/lcsc_grabber/kicad/: footprint_writer.py  library_manager.py  model3d_config.py  symbol_writer.py
plugins/lcsc_grabber/utils/: geometry.py
resources/: lcsc-grabber.desktop  metadata.json
scripts/: build.py
