[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcsc-grabber"
version = "1.1.0"
description = "Import electronic components from LCSC/EasyEDA catalog into KiCad"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alessio Lami"}
]
requires-python = ">=3.8"
dependencies = [
    "wxPython>=4.0",
    "requests>=2.25",
    "easyeda2kicad>=0.8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
keywords = ["kicad", "lcsc", "easyeda", "eda", "electronics", "pcb", "schematic"]

[project.urls]
Homepage = "https://github.com/AlessioLami/lcsc-grabber-kicad"
Repository = "https://github.com/AlessioLami/lcsc-grabber-kicad"
Issues = "https://github.com/AlessioLami/lcsc-grabber-kicad/issues"

[project.scripts]
lcsc-grabber = "lcsc_grabber:main"

[project.gui-scripts]
lcsc-grabber-gui = "lcsc_grabber:main"

[tool.setuptools.packages.find]
where = ["plugins"]

[tool.setuptools.package-data]
lcsc_grabber = ["*.png", "*.ico"]
